--- a/sass/components/_side-menu.scss
+++ b/sass/components/_side-menu.scss
@@ -15,7 +15,7 @@
     transform: translate(0);
   }
 
-  @media (hover: none) {
+  @media only screen and (hover: none) {
     &::-webkit-scrollbar {
       display: none;
     }
